@startuml Diagrama de Arquitetura - GWJ Dinâmico (Proposta)

' --- Configurações Visuais ---
skinparam theme cerulean
skinparam Handwritten false
skinparam Monochrome false
skinparam Shadowing true
skinparam packageStyle Frame
skinparam ComponentStyle uml2

title Arquitetura Proposta do Projeto Integrador GWJ (Com Padrões de Projeto & Escalabilidade)

' --- Camadas ---

package "Apresentação (View - Frontend)" as ViewLayer {
    component "Thymeleaf Templates\n(HTML5 + Bootstrap)" as Templates
    component "JavaScript (delete.js, etc.)\n(Requisições Fetch/AJAX)" as JS
}

package "Controle (Controllers & Interceptors)" as ControllerLayer {
    component "GenericViewController\n(Rotas Dinâmicas de View)" as GenericView
    component "JsonController\n(API REST - Operações CRUD)" as JsonCtrl
    component "LoginController\n(Autenticação e Sessão)" as LoginCtrl
    component "AdminInterceptor\n(Controle de Acesso/Segurança)" as Interceptor
}

package "Mapeamento HTTP/Request (DTO / Reflection)" as UtilLayer {
    component "EntityMapper\n(Popula entidades via HTTP Request)" as HTTPMapper
    component "SimpleObjectFactory\n(Instanciação dinâmica de IEntity)" as Factory
}

package "Serviços (Service Layer & Transações)" as ServiceLayer {
    interface "IService<T>\n(Interface Base de Serviço)" as IService
    component "GenericService\n(Orquestrador CRUD Genérico)" as GenService
    component "Serviços Específicos\n(UsuarioService, ClienteService,\netc. - Regras de Negócio)" as SpecServices
    component "ServiceRegistry\n(Resolução Dinâmica de Serviços)" as ServiceRegistry
    component "UnitOfWork\n(Controle de Transações & ThreadLocal)" as UoW
}

package "Acesso a Dados (Repository Layer)" as RepositoryLayer {
    interface "IRepository<T>\n(Interface de Repositório)" as IRepo
    component "GenericRepository\n(Persistência Base Dinâmica)" as GenRepo
    component "Repositórios Específicos\n(UsuarioRepository, ClienteRepository,\netc. - Consultas Customizadas)" as SpecRepos
}

package "Mapeador de Banco (Data Mapper)" as MapperLayer {
    component "DataMapper\n(Mapeamento SQL <=> Objetos de Domínio)" as DataMapper
    component "QueryBuilder\n(Construção dinâmica de SQL)" as QueryBuilder
    component "SchemaValidator\n(Validação de Schema/Tabelas)" as Validator
    component "ConnectionDB\n(Gerenciador de Conexão JDBC)" as DBConn
}

package "Domínio (Model - Entities)" as ModelLayer {
    interface "IEntity\n(Interface Base)" as IEntity
    component "Entidades do Domínio\n(Usuario, Cliente, Perfil,\nPermissao, Servico, Agenda, etc.)" as Entities
}

database "MySQL Database" as DB

' --- Relacionamentos e Fluxo de Dados ---

' Fluxo da View para Controllers
Templates --> GenericView : Requisições HTTP GET (Listagem, Detalhes, Forms)
JS --> JsonCtrl : Requisições HTTP POST/PUT/DELETE (JSON)
Templates --> LoginCtrl : Form de Login

' Interceptor monitora requisições
Interceptor -[dashed]-> GenericView : Intercepta & Valida Sessão
Interceptor -[dashed]-> JsonCtrl : Intercepta & Valida Sessão

' Controllers utilizam Mapeamento e Fábrica HTTP
GenericView ..> Factory : Cria entidade pelo nome
GenericView ..> HTTPMapper : Popula dados do Request na Entidade
JsonCtrl ..> Factory : Cria entidade pelo nome
JsonCtrl ..> HTTPMapper : Popula dados do Request na Entidade

' NOVO FLUXO: Controllers chamam ServiceRegistry para obter o Serviço correto
GenericView --> ServiceRegistry : Solicita Serviço por entidade
JsonCtrl --> ServiceRegistry : Solicita Serviço por entidade
LoginCtrl --> ServiceRegistry : Solicita UsuarioService para autenticação

' Resolução dos Serviços
ServiceRegistry ..> IService : Gerencia/Resolve
GenService .up.|> IService
SpecServices .up.|> IService

' Serviços utilizam Unit of Work para controlar transações
IService ..> UoW : Inicia / Confirma / Cancela transações
UoW --> DBConn : Gerencia Connection (ThreadLocal)

' Serviços acessam a camada de Repositório
IService --> IRepo : Executa regras de persistência
GenRepo .up.|> IRepo
SpecRepos .up.|> IRepo

' Repositórios utilizam Data Mapper para converter entidades/SQL
IRepo ..> DataMapper : Solicita mapeamento objeto-relacional
DataMapper ..> QueryBuilder : Constrói SQL dinâmico
DataMapper ..> Validator : Valida integridade do schema
DataMapper --> DBConn : Executa instruções SQL (Via conexão compartilhada pelo UoW)
DBConn --> DB : Conecta via Driver JDBC

' Fábricas e Mapeadores trabalham com IEntity e Entidades
Factory ..> IEntity : Instancia
HTTPMapper ..> IEntity : Popula
Entities -up-|> IEntity : Implementam
DataMapper ..> IEntity : Mapeia

note right of ServiceLayer
  A introdução de **Serviços** e **Unit of Work**
  centraliza as regras de negócio e garante atomicidade
  nas transações (ACID), separando a lógica de controle
  HTTP do acesso aos dados.
end note

note right of MapperLayer
  O **Data Mapper** assume a responsabilidade de reflexão
  e geração de queries SQL que antes residiam no DAO,
  deixando a camada de Repositórios limpa e focada
  apenas no contrato de dados.
end note

@enduml
